import { HubSpotConfigAccount } from '@hubspot/local-dev-lib/types/Accounts';

vi.mock('@hubspot/local-dev-lib/config');
vi.mock('@hubspot/local-dev-lib/logger', async importOriginal => {
  const original =
    await importOriginal<typeof import('@hubspot/local-dev-lib/logger')>();
  return {
    ...original,
    getLabels: vi.fn(),
  };
});

import { Diagnosis } from '../Diagnosis.js';
import { DiagnosticInfo } from '../DiagnosticInfoBuilder.js';
import { getConfigAccountIfExists as __getConfigAccountIfExists } from '@hubspot/local-dev-lib/config';
import { getLabels as __getLabels } from '@hubspot/local-dev-lib/logger';
import stripAnsi from 'strip-ansi';
import { Mock } from 'vitest';

const getLabels = __getLabels as Mock<typeof __getLabels>;

const getConfigAccountIfExists = __getConfigAccountIfExists as Mock<
  typeof __getConfigAccountIfExists
>;

describe('lib/doctor/Diagnosis', () => {
  const diagnosticInfo: DiagnosticInfo = {
    account: {},
    arch: process.arch,
    config: 'path/to/config.json',
    defaultAccountOverrideFile: 'path/to/default/account/override/.hsaccount',
    configSettings: { httpUseLocalhost: false },
    configFiles: [],
    hsMetaFiles: [],
    envFiles: [],
    files: [],
    jsonFiles: [],
    packageFiles: [],
    packageLockFiles: [],
    platform: process.platform,
    project: {
      config: {
        projectDir: 'project-dir',
        projectConfig: {
          name: 'Super cool project',
          srcDir: 'project-dir',
          platformVersion: 'test',
        },
      },
    },
    versions: { '@hubspot/cli': '123', node: '18.0.1', npm: '8.0.0' },
  };

  const accountId = 123456;

  beforeEach(() => {
    getLabels.mockReturnValue({
      success: '✔ SUCCESS',
      warning: '⚠ WARNING',
      error: '✖ ERROR',
      info: 'ℹ INFO',
      debug: 'DEBUG',
    });
    getConfigAccountIfExists.mockReturnValue({
      accountId,
      accountType: 'STANDARD',
      name: 'Standard Account',
    } as HubSpotConfigAccount);
  });

  describe('toString', () => {
    it('should return an empty diagnosis when no sections have been added', () => {
      const diagnosis = new Diagnosis({ diagnosticInfo, accountId });
      const output = diagnosis.toString();
      expect(output).toEqual('');
    });

    it('should generate the diagnosis output', () => {
      const diagnosis = new Diagnosis({ diagnosticInfo, accountId });

      const cliMessage = 'Important CLI Message';
      const cliSecondaryMessage = 'The CLI Section is Showing';

      diagnosis.addCliSection({
        type: 'success',
        message: cliMessage,
        secondaryMessaging: cliSecondaryMessage,
      });

      const cliConfigMessage = 'Important CLI Config Message';
      const cliConfigSecondaryMessage = 'The CLI Config Section is Showing';

      diagnosis.addCLIConfigSection({
        type: 'error',
        message: cliConfigMessage,
        secondaryMessaging: cliConfigSecondaryMessage,
      });

      const projectMessage = 'Important Project Message';
      const projectSecondaryMessage = 'The Project Section is Showing';

      diagnosis.addProjectSection({
        type: 'warning',
        message: projectMessage,
        secondaryMessaging: projectSecondaryMessage,
      });

      expect(stripAnsi(diagnosis.toString())).toMatchSnapshot();
    });

    it('should generate categories that have sections', () => {
      const diagnosis = new Diagnosis({ diagnosticInfo, accountId });

      const cliMessage = 'Important CLI Message';
      const cliSecondaryMessage = 'The CLI Section is Showing';

      diagnosis.addCliSection({
        type: 'success',
        message: cliMessage,
        secondaryMessaging: cliSecondaryMessage,
      });

      expect(stripAnsi(diagnosis.toString())).toMatchSnapshot();
    });

    it('should use ASCII labels when unicode is not supported', () => {
      getLabels.mockReturnValue({
        success: '[SUCCESS]',
        warning: '[WARNING]',
        error: '[ERROR]',
        info: '[INFO]',
        debug: '[DEBUG]',
      });

      const diagnosis = new Diagnosis({ diagnosticInfo, accountId });

      diagnosis.addCliSection({
        type: 'success',
        message: 'Important CLI Message',
        secondaryMessaging: 'The CLI Section is Showing',
      });

      diagnosis.addCLIConfigSection({
        type: 'error',
        message: 'Important CLI Config Message',
        secondaryMessaging: 'The CLI Config Section is Showing',
      });

      diagnosis.addProjectSection({
        type: 'warning',
        message: 'Important Project Message',
        secondaryMessaging: 'The Project Section is Showing',
      });

      expect(stripAnsi(diagnosis.toString())).toMatchSnapshot();
    });
  });
});
