// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`lib/doctor/Diagnosis > toString > should generate categories that have sections 1`] = `
"
HubSpot CLI install
  ✔ SUCCESS Important CLI Message
    - The CLI Section is Showing

Errors: 0
Warning: 0
"
`;

exports[`lib/doctor/Diagnosis > toString > should generate the diagnosis output 1`] = `
"
HubSpot CLI install
  ✔ SUCCESS Important CLI Message
    - The CLI Section is Showing

CLI configuration
Config File: path/to/config.json
Default Account: Standard Account [standard] (123456)
  ✖ ERROR Important CLI Config Message
    - The CLI Config Section is Showing

Project configuration
Project dir: project-dir
Project name: Super cool project
  ⚠ WARNING Important Project Message
    - The Project Section is Showing

Errors: 1
Warning: 1
"
`;

exports[`lib/doctor/Diagnosis > toString > should use ASCII labels when unicode is not supported 1`] = `
"
HubSpot CLI install
  [SUCCESS] Important CLI Message
    - The CLI Section is Showing

CLI configuration
Config File: path/to/config.json
Default Account: Standard Account [standard] (123456)
  [ERROR] Important CLI Config Message
    - The CLI Config Section is Showing

Project configuration
Project dir: project-dir
Project name: Super cool project
  [WARNING] Important Project Message
    - The Project Section is Showing

Errors: 1
Warning: 1
"
`;
